# face-detail-extractor

./: README.md  age-classifier-model.ipynb  age_classifier_model.ipynb
.ipynb_checkpoints/: age-classifier-model-checkpoint.ipynb
app/: .dockerignore  Dockerfile  face_multi_task.keras  face_multi_task_2.keras  main.py  pyproject.toml
face-detail-extractor/: package-lock.json  package.json
face-detail-extractor/app/: layout.tsx  page.tsx
